--- a/maps/index.html
+++ b/maps/index.html
@@ -4,14 +4,83 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Go to Google Maps</title>
+    <style>
+      body {
+        text-align: center;
+      }
+      img {
+        max-width: 100%;
+        width: 900px;
+        display: block;
+        margin: 0 auto;
+      }
+      .btn {
+        background-color: #eee;
+        background-image: -webkit-gradient(
+          linear,
+          left top,
+          left bottom,
+          color-stop(0, #fcfcfc),
+          to(#eee)
+        );
+        background-image: linear-gradient(to bottom, #fcfcfc 0, #eee 100%);
+        background-repeat: no-repeat;
+        border: 1px solid #d5d5d5;
+        color: black;
+        display: inline-flex;
+        vertical-align: middle;
+        text-align: left;
+        align-items: center;
+        padding: 3px 10px 3px 8px;
+        font-size: 16px;
+        line-height: 22px;
+        border-radius: 4px;
+        margin-bottom: 10px;
+      }
+
+      .btn:focus,
+      .btn:hover {
+        text-decoration: none;
+        background-color: #ddd;
+        background-image: -webkit-gradient(
+          linear,
+          left top,
+          left bottom,
+          color-stop(0, #eee),
+          to(#ddd)
+        );
+        background-image: linear-gradient(to bottom, #eee 0, #ddd 100%);
+        border-color: #ccc;
+      }
+      .btn:focus {
+        text-decoration: none;
+        background-color: #ddd;
+        background-image: -webkit-gradient(
+          linear,
+          left top,
+          left bottom,
+          color-stop(0, #eee),
+          to(#ddd)
+        );
+        background-image: linear-gradient(to bottom, #eee 0, #ddd 100%);
+        border-color: #ccc;
+      }
+      .btn:active {
+        background-color: #dcdcdc;
+        background-image: none;
+        border-color: #b5b5b5;
+        box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15);
+      }
+    </style>
   </head>
-  <body style="text-align: center">
+  <body>
     <p>
       Un lien à glisser dans la barre de favoris pour ouvrir Google Maps avec la
       recherche en cours
     </p>
     <p>
       <a
+        class="btn"
         href="javascript:window.open(`https://www.google.com/maps?q=${new URL(document.location).searchParams.get('q') || ''}`); event && event.stopPropagation();"
         >🗺Maps</a
       >
@@ -20,9 +89,9 @@
     <p>
       Exemple avec NYC :
 
-      <a target="_blank" rel="noopener noreferrer" href="preview.png"
-        ><img src="preview.png" alt="image" style="max-width: 100%"
-      /></a>
+      <a target="_blank" rel="noopener noreferrer" href="preview.png">
+        <img src="preview.png" alt="image" />
+      </a>
     </p>
 
     <p>
